feat(skill curator): Integration tests